Secure document, disable new/edit/delete order

--- a/Resources/translations/messages.fr.yml
+++ b/Resources/translations/messages.fr.yml
@@ -5,6 +5,8 @@ ekyna_order:
         customer: Client
         invoice_address: Addresse de facturation
         delivery_address: Addresse de livraison
+        invoice: Facture
+        invoice_pdf: Facture PDF
         no_shipment: Sans livraison
         details: Détails
         net_unit: Prix Unit. HT
