Translations, invoice template

--- a/Resources/translations/messages.fr.yml
+++ b/Resources/translations/messages.fr.yml
@@ -18,14 +18,14 @@ ekyna_order:
             plural: Commandes
         header:
             list: Commandes <small>Liste des commandes</small>
-            show: Detail de la commande<small>%number%</small>
+            show: Détail de la commande<small>%number%</small>
             content: Contenu de la commande <small>%number%</small>
             new: Créer une nouvelle commande
             edit: Modifier la commande <small>%number%</small>
             remove: Supprimer la commande <small>%number%</small>
         button:
             list: Liste des commandes
-            show: Detail de la commande
+            show: Détail de la commande
             new: Nouvelle commande
             edit: Modifier la commande
             remove: Supprimer la commande
