--- a/Resources/translations/messages.fr.yml
+++ b/Resources/translations/messages.fr.yml
@@ -6,7 +6,6 @@ ekyna_order:
         header:
             list: Commandes <small>Liste des commandes</small>
             show: Détail de la commande<small>%number%</small>
-            content: Contenu de la commande <small>%number%</small>
             new: Créer une nouvelle commande
             edit: Modifier la commande <small>%number%</small>
             remove: Supprimer la commande <small>%number%</small>
@@ -48,6 +47,24 @@ ekyna_order:
             cart: Panier
             order: Commande
             quote: Devis
+        message:
+            already_paid: La commande est déjà réglée en totalité
+            has_payment_cant_deleted: Cette commande a des paiements et ne peut être supprimée.
+            has_shipment_cant_deleted: Cette commande a des livraisons et ne peut être supprimée.
+    payment:
+        label:
+            singular: Paiement
+            plural: Paiements
+        header:
+            new: Créer un nouveau paiement
+            edit: Modifier le paiement
+            remove: Supprimer le paiement
+        button:
+            new: Nouveau paiement
+            edit: Modifier le paiement
+            remove: Supprimer le paiement
+        message:
+            remove_confirm: Souhaitez-vous réellement supprimer ce paiement ?
     tax:
         label:
             singular: Taxe
@@ -68,3 +85,10 @@ ekyna_order:
             no_item: Aucune tax configuré
     event:
         locked: La commande est verrouillée et ne peut être modifiée.
+    view:
+        designation: Désignation
+        unit_net_price: Prix unit. HT # TODO nbsp twig filter
+        quantity: Quantité
+        total_net_price: Total HT
+        net_sub_total: Sous-total HT
+        ati_total: Total TTC
